# timgiup-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md  categories.md  mcp-server.md  provinces.md
examples/: README.md  claude-code-config.json  claude-desktop-config.json
mcp_server/: __init__.py  client.py  server.py
mcp_server/data/: categories.json  provinces.json
