[project]
name = "lost-item-search-api-vietnam"
version = "0.1.0"
description = "MCP server for searching lost items, lost documents, and lost pets in Vietnam via timgiup.com"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "timgiup.com", email = "timgiup.com@gmail.com"}]
keywords = ["mcp", "mcp-server", "vietnam", "lost-and-found", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://timgiup.com"
Repository = "https://github.com/timgiup/lost-item-search-api-vietnam"
Issues = "https://github.com/timgiup/lost-item-search-api-vietnam/issues"

[project.scripts]
lost-item-search-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"mcp_server/data/categories.json" = "mcp_server/data/categories.json"
"mcp_server/data/provinces.json" = "mcp_server/data/provinces.json"
